Calculator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    LPAREN
    RPAREN

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> empty
Rule 3     expression -> expression POW expression
Rule 4     expression -> expression MUL expression
Rule 5     expression -> expression DIV expression
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> INT
Rule 9     expression -> FLOAT
Rule 10    empty -> <empty>

Terminals, with rules where they appear

DIV                  : 5
FLOAT                : 9
FUNCTION             : 
INT                  : 8
LPAREN               : 
MINUS                : 7
MUL                  : 4
PLUS                 : 6
POW                  : 3
RPAREN               : 
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 2
expression           : 1 3 3 4 4 5 5 6 6 7 7

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . empty
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT
    (10) empty -> .

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    $end            reduce using rule 10 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    $end            reduce using rule 1 (calc -> expression .)
    POW             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 3

    (2) calc -> empty .

    $end            reduce using rule 2 (calc -> empty .)


state 4

    (8) expression -> INT .

    POW             reduce using rule 8 (expression -> INT .)
    MUL             reduce using rule 8 (expression -> INT .)
    DIV             reduce using rule 8 (expression -> INT .)
    PLUS            reduce using rule 8 (expression -> INT .)
    MINUS           reduce using rule 8 (expression -> INT .)
    $end            reduce using rule 8 (expression -> INT .)


state 5

    (9) expression -> FLOAT .

    POW             reduce using rule 9 (expression -> FLOAT .)
    MUL             reduce using rule 9 (expression -> FLOAT .)
    DIV             reduce using rule 9 (expression -> FLOAT .)
    PLUS            reduce using rule 9 (expression -> FLOAT .)
    MINUS           reduce using rule 9 (expression -> FLOAT .)
    $end            reduce using rule 9 (expression -> FLOAT .)


state 6

    (3) expression -> expression POW . expression
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    expression                     shift and go to state 11

state 7

    (4) expression -> expression MUL . expression
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    expression                     shift and go to state 12

state 8

    (5) expression -> expression DIV . expression
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    expression                     shift and go to state 13

state 9

    (6) expression -> expression PLUS . expression
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    expression                     shift and go to state 14

state 10

    (7) expression -> expression MINUS . expression
    (3) expression -> . expression POW expression
    (4) expression -> . expression MUL expression
    (5) expression -> . expression DIV expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . INT
    (9) expression -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    expression                     shift and go to state 15

state 11

    (3) expression -> expression POW expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    POW             reduce using rule 3 (expression -> expression POW expression .)
    MUL             reduce using rule 3 (expression -> expression POW expression .)
    DIV             reduce using rule 3 (expression -> expression POW expression .)
    PLUS            reduce using rule 3 (expression -> expression POW expression .)
    MINUS           reduce using rule 3 (expression -> expression POW expression .)
    $end            reduce using rule 3 (expression -> expression POW expression .)

  ! POW             [ shift and go to state 6 ]
  ! MUL             [ shift and go to state 7 ]
  ! DIV             [ shift and go to state 8 ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 10 ]


state 12

    (4) expression -> expression MUL expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    MUL             reduce using rule 4 (expression -> expression MUL expression .)
    DIV             reduce using rule 4 (expression -> expression MUL expression .)
    PLUS            reduce using rule 4 (expression -> expression MUL expression .)
    MINUS           reduce using rule 4 (expression -> expression MUL expression .)
    $end            reduce using rule 4 (expression -> expression MUL expression .)
    POW             shift and go to state 6

  ! POW             [ reduce using rule 4 (expression -> expression MUL expression .) ]
  ! MUL             [ shift and go to state 7 ]
  ! DIV             [ shift and go to state 8 ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 10 ]


state 13

    (5) expression -> expression DIV expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    MUL             reduce using rule 5 (expression -> expression DIV expression .)
    DIV             reduce using rule 5 (expression -> expression DIV expression .)
    PLUS            reduce using rule 5 (expression -> expression DIV expression .)
    MINUS           reduce using rule 5 (expression -> expression DIV expression .)
    $end            reduce using rule 5 (expression -> expression DIV expression .)
    POW             shift and go to state 6

  ! POW             [ reduce using rule 5 (expression -> expression DIV expression .) ]
  ! MUL             [ shift and go to state 7 ]
  ! DIV             [ shift and go to state 8 ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 10 ]


state 14

    (6) expression -> expression PLUS expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    PLUS            reduce using rule 6 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 6 (expression -> expression PLUS expression .)
    $end            reduce using rule 6 (expression -> expression PLUS expression .)
    POW             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8

  ! POW             [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! MUL             [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! DIV             [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 10 ]


state 15

    (7) expression -> expression MINUS expression .
    (3) expression -> expression . POW expression
    (4) expression -> expression . MUL expression
    (5) expression -> expression . DIV expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression

    PLUS            reduce using rule 7 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 7 (expression -> expression MINUS expression .)
    $end            reduce using rule 7 (expression -> expression MINUS expression .)
    POW             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8

  ! POW             [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! MUL             [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! DIV             [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 10 ]

